# food-language-MistralAPI

./: .gitignore  README.md  ingredient_parser.py  interactive_labeling.py  language.py  main.py  model_training.py  product_mapper.py  pyproject.toml  requirements.in  requirements.txt
